@@ -300,7 +300,13 @@ transaction::Methods::Methods(std::shared_ptr<transaction::Context> const& trans
     : _state(nullptr),
       _transactionContext(transactionContext),
       _mainTransaction(false) {
+
   TRI_ASSERT(transactionContext != nullptr);
+  if (ADB_UNLIKELY(transactionContext == nullptr)) {
+    // in production, we must not go on with undefined behavior, so we bail out
+    // here with an exception as last resort
+    THROW_ARANGO_EXCEPTION_MESSAGE(TRI_ERROR_INTERNAL, "invalid transaction context pointer");
+  }
 
   // initialize the transaction
   _state = _transactionContext->acquireState(options, _mainTransaction);
